--- a/pages/tobey-maguire/spiderman1.html
+++ b/pages/tobey-maguire/spiderman1.html
@@ -1,55 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tobey Maguire | Spider-Man</title>
-  <link rel="stylesheet" href="../../assets/css/internal.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spider-Man | Tobey Maguire</title>
+  <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
 </head>
-<body class="s-wrapper s-spiderman-01-01">
 
-  <main class="s-main-content">
-    <section class="s-main-content__top">
-      <div class="s-logo">
-        <img src="../../assets/images/icons/spider.svg" alt="Spider-Man Logo">
-      </div>
+<body>
+  <div class="s-wrapper s-spiderman-01-01">
+    <video autoplay loop muted>
+      <source src="../../assets/videos/spiderman-tobey-trailer.mp4" type="video/mp4" />
+    </video>
 
-      <div class="s-description">
-        <div class="s-description__text">
-          <p>
-            Tobey Maguire estrelou a trilogia original de Spider-Man dirigida por Sam Raimi. 
-            Os filmes exploram a origem, os dilemas e as vitórias do primeiro herói do multiverso aracnídeo.
-          </p>
+    <!-- Coluna da esquerda com o menu -->
+    <div class="s-left-column">
+      <nav class="navigator">
+        <div class="navigator__icon">
+          <a href="../../index.html">
+            <img src="../../assets/images/icons/spiderman1-tobey.png" alt="Ícone Tobey Maguire" />
+          </a>
+        </div>
+        <ul>
+          <li><a href="#01" class="active">01</a></li>
+          <li><a href="spiderman2.html">02</a></li>
+          <li><a href="spiderman3.html">03</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!-- FIM da Coluna da esquerda -->
+
+    <!-- Conteúdo principal -->
+    <div class="s-main-content">
+      <div class="s-main-content__top">
+        <div class="s-logo">
+          <img src="../../assets/images/spiderman-tobey/movie-01/logo.png"
+               alt="Spider-Man (2002)" title="Spider-Man (2002)" />
+        </div>
+
+        <div class="s-description">
+          <div class="pills">
+            <ul>
+              <li>Ano: 2002</li>
+              <li>Diretor: Sam Raimi</li>
+            </ul>
+          </div>
+
+          <div class="s-description__text">
+            <p><strong>Sinopse:</strong> Depois de ser picado por uma aranha geneticamente modificada,
+              o jovem Peter Parker ganha superpoderes. Inicialmente, usa-os para ganhar dinheiro,
+              mas após a morte de seu tio Ben, decide combater o crime. Seu primeiro grande inimigo
+              é o terrível Duende Verde, que ameaça Nova York.</p>
+          </div>
+        </div>
+
+        <div class="s-links">
+          <ul>
+            <li>
+              <a href="https://www.youtube.com/watch?v=O7zvehDxttM"
+                 class="link-button" target="_blank">
+                <span class="icon">
+                  <div class="play-icon">&nbsp;</div>
+                </span>
+                <span class="label">Assistir trailer</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-    </section>
 
-    <section class="movie-grid">
-      <article class="movie">
-        <img src="../../assets/images/spiderman-tobey/movie-01/poster.jpg" alt="Homem-Aranha (2002)">
-        <div class="movie-info">
-          <h3>Homem-Aranha (2002)</h3>
-          <p>Peter Parker descobre seus poderes e enfrenta o Duende Verde.</p>
+      <div class="s-main-content__bottom">
+        <div class="gallery">
+          <ul>
+            <li><a href="#"><img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-04.png" alt=""></a></li>
+          </ul>
         </div>
-      </article>
-
-      <article class="movie">
-        <img src="../../assets/images/spiderman-tobey/movie-02/poster.jpg" alt="Homem-Aranha 2 (2004)">
-        <div class="movie-info">
-          <h3>Homem-Aranha 2 (2004)</h3>
-          <p>Peter enfrenta o Dr. Octopus enquanto tenta equilibrar sua vida pessoal e heroica.</p>
-        </div>
-      </article>
-
-      <article class="movie">
-        <img src="../../assets/images/spiderman-tobey/movie-03/poster.jpg" alt="Homem-Aranha 3 (2007)">
-        <div class="movie-info">
-          <h3>Homem-Aranha 3 (2007)</h3>
-          <p>Um novo inimigo surge com a chegada do simbionte, testando o lado sombrio de Peter.</p>
-        </div>
-      </article>
-    </section>
-  </main>
-
+      </div>
+    </div>
+  </div>
 </body>
 </html>
+
