--- a/pages/tom-holland/spiderman3.html
+++ b/pages/tom-holland/spiderman3.html
@@ -34,15 +34,15 @@
     <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2007)"
-            title="Spiderman 3 (2007)" />
+          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2021)"
+            title="Spiderman 3 (2021)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2007</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2021</li>
+              <li>Diretor: Jon Watts</li>
             </ul>
           </div>
           <div class="s-description__text">
