--- a/pages/tom-holland/spiderman2.html
+++ b/pages/tom-holland/spiderman2.html
@@ -11,9 +11,7 @@
 
 <body>
   <div class="s-wrapper">
-    <video autoplay loop>
-      <source src="../../assets/videos/spiderman2-2019-trailer.mp4" type="video/mp4" />
-    </video>
+
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
@@ -31,23 +29,22 @@
     </div>
     <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content">
+    <div class="s-main-content s-spiderman-03-02">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tom/movie-02/logo.png" alt="Spiderman 2 (2019)"
-            title="Spiderman 2 (2019)" />
+          <img src="../../assets/images/spiderman-tom/movie-02/logo.png" alt="Spiderman 2 (2005)"
+            title="Spiderman 2 (2005)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2019</li>
-              <li>Diretor: Jon Watts</li>
+              <li>Ano: 2005</li>
+              <li>Diretor: Sam Raimi</li>
             </ul>
           </div>
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;Peter Parker está em uma viagem de duas semanas pela Europa, ao lado de seus amigos de colégio, quando é surpreendido pela visita de Nick Fury. Convocado para mais uma missão heroica, ele precisa enfrentar vários vilões que surgem em cidades símbolo do continente, como Londres, Paris e Veneza, e também a aparição do enigmático Mysterio.
-</p>
+            <p><strong>Sinopse:</strong>&nbsp;Quando uma falha na experiência de fusão nuclear resulta em uma explosão que mata sua esposa, o Dr. Otto Octavius é transformado em Dr. Octopus, um ciborgue com tentáculos de metal. Doc Ock culpa o Homem-Aranha pelo acidente e quer vingança. Enquanto isso, o alter ego do herói, Peter Parker, perde seus poderes. Para complicar as coisas, o seu melhor amigo odeia o Homem-Aranha e sua amada fica noiva..</p>
           </div>
         </div>
 
@@ -70,10 +67,9 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-01.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-02.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-03.png" alt=""></a></li>
           </ul>
         </div>
       </div>
