--- a/pages/tom-holland/spiderman3.html
+++ b/pages/tom-holland/spiderman3.html
@@ -11,9 +11,7 @@
 
 <body>
   <div class="s-wrapper">
-    <video autoplay loop>
-      <source src="../../assets/videos/spiderman3-2021-trailer.mp4" type="video/mp4" />
-    </video>
+
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
@@ -31,22 +29,22 @@
     </div>
     <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content">
+    <div class="s-main-content s-spiderman-03-03">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2021)"
-            title="Spiderman 3 (2021)" />
+          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2007)"
+            title="Spiderman 3 (2007)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2021</li>
-              <li>Diretor: Jon Watts</li>
+              <li>Ano: 2007</li>
+              <li>Diretor: Sam Raimi</li>
             </ul>
           </div>
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;Peter Parker tem a sua identidade secreta revelada e pede ajuda ao Doutor Estranho. Quando o feitiço para reverter o evento não sai como esperado, o Homem-Aranha e o seu companheiro dos Vingadores precisam enfrentar inimigos de todo o multiverso.</p>
+            <p><strong>Sinopse:</strong>&nbsp;O relacionamento entre Peter Parker e Mary Jane parece estar dando certo, mas outros problemas começam a surgir. A roupa de Homem-Aranha torna-se preta e acaba controlando Peter - apesar de aumentar seus poderes, ela revela e amplia o lado obscuro de sua personalidade. Com isso, os vilões Venom e Homem-Areia tentam destruir o herói.</p>
           </div>
         </div>
 
@@ -69,10 +67,9 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-03/gallery/image-01.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-03/gallery/image-02.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-03/gallery/image-03.png" alt=""></a></li>
           </ul>
         </div>
       </div>
