--- a/pages/andrew-garfield/spiderman1.html
+++ b/pages/andrew-garfield/spiderman1.html
@@ -11,6 +11,9 @@
 
 <body>
   <div class="s-wrapper">
+    <video autoplay loop>
+      <source src="../../assets/videos/amazing-spiderman-2014-trailer.mp4" type="video/mp4" />
+    </video>
 
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
@@ -28,7 +31,7 @@
     </div>
     <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content s-spiderman-02-01">
+    <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-andrew/movie-01/logo.png" alt="Spiderman (2002)"
@@ -72,7 +75,7 @@
         <div class="gallery">
           <ul>
             <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img class="preview" src="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png" alt=""></a></li>
             <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-03.png" alt=""></a></li>
           </ul>
         </div>
