--- a/pages/andrew-garfield/spiderman2.html
+++ b/pages/andrew-garfield/spiderman2.html
@@ -12,6 +12,10 @@
 <body>
   <div class="s-wrapper">
 
+    <video autoplay loop>
+      <source src="../../assets/videos/amazing-spiderman2-2014-trailer.mp4" type="video/mp4" />
+    </video>
+
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
@@ -28,7 +32,7 @@
     </div>
     <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content s-spiderman-02-02">
+    <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-andrew/movie-02/logo.png" alt="Spiderman 2 (2005)"
