--- a/pages/tom-holland/spiderman1.html
+++ b/pages/tom-holland/spiderman1.html
@@ -11,7 +11,9 @@
 
 <body>
   <div class="s-wrapper">
-
+    <video autoplay loop>
+      <source src="../../assets/videos/spiderman-2017-trailer.mp4" type="video/mp4" />
+    </video>
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
@@ -29,7 +31,7 @@
     </div>
     <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content s-spiderman-03-01">
+    <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-tom/movie-01/logo.png" alt="Spiderman (2002)"
