--- a/pages/tom-holland/spiderman2.html
+++ b/pages/tom-holland/spiderman2.html
@@ -11,7 +11,9 @@
 
 <body>
   <div class="s-wrapper">
-
+    <video autoplay loop>
+      <source src="../../assets/videos/spiderman2-2019-trailer.mp4" type="video/mp4" />
+    </video>
     <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
@@ -29,7 +31,7 @@
     </div>
     <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content s-spiderman-03-02">
+    <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-tom/movie-02/logo.png" alt="Spiderman 2 (2005)"
@@ -67,9 +69,10 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-03.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
+            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
           </ul>
         </div>
       </div>
