--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       sizes="16x16"
       href="/assets/images/icons/spider.ico"
     />
-    <title>Spider Man | Bruno Dórea</title>
+    <title>Spider Man | Multiversos</title>
     <!-- GOOGLE ANALYTICS -->
     <script
       async
@@ -106,11 +106,6 @@
           />
           <h2 class="s-card__title">Andew Garfield</h2>
         </a>
-
-        <!-- <a href="./pages/miles-morales/spiderman1.html" class="s-card" id="spider-man-04">
-                <img class="s-card__background" src="/assets/images/pic-sm-bg-04.jpg">
-                <img class="s-card__image" src="/assets/images/spider-man-04.png" alt="Miles Morales">
-                <h2 class="s-card__title">Miles Morales</h2>
             </a> -->
       </div>
     </div>
