--- a/pages/tobey-maguire/spiderman1.html
+++ b/pages/tobey-maguire/spiderman1.html
@@ -8,13 +8,13 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/icons/spiderman1.png"
+      href="../../assets/images/icons/spiderman1-tom.png"
     />
-    <title>Spider Man - Tobey Maguire | Bruno Dórea</title>
-    <link href="../../assets/css/internal.css" rel="stylesheet" />
+    <title>Spider Man - Tom Holland | Bruno Dórea</title>
     <link
+      href="../../assets/css/internal.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+      type="text/css"
     />
     <!-- GOOGLE ANALYTICS -->
     <script
@@ -30,21 +30,22 @@
       gtag("config", "G-TJQ2XJZPTD");
     </script>
   </head>
+
   <body>
-    <div class="s-wrapper s-spiderman-01-01">
+    <div class="s-wrapper s-spiderman-03-01">
       <!-- <video autoplay loop>
-      <source src="../../assets/videos/spiderman-2002-trailer.mp4" type="video/mp4" />
+      <source src="../../assets/videos/spiderman-2017-trailer.mp4" type="video/mp4" />
     </video> -->
 
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../../assets/images/icons/spiderman1.png" />
+              <img src="../../assets/images/icons/spiderman1-tom.png" />
             </a>
           </div>
           <ul>
-            <li><a href="#01">01</a></li>
+            <li><a href="#01" class="active">01</a></li>
             <li><a href="spiderman2.html">02</a></li>
             <li><a href="spiderman3.html">03</a></li>
           </ul>
@@ -55,7 +56,7 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src="../../assets/images/spiderman-tobey/movie-01/logo.png"
+              src="../../assets/images/spiderman-tom/movie-01/logo.png"
               alt="Spiderman (2002)"
               title="Spiderman (2002)"
             />
@@ -64,21 +65,20 @@
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2002</li>
-                <li>Diretor: Sam Raimi</li>
+                <li>Ano: 2017</li>
+                <li>Diretor: Jon Watts</li>
               </ul>
             </div>
             <div class="s-description__text">
               <p>
-                <strong>Sinopse:</strong>&nbsp;Depois de ser picado por uma
-                aranha geneticamente modificada em uma demonstração científica,
-                o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele
-                pretende usá-los para para ganhar dinheiro, adotando o nome de
-                Homem-Aranha e se apresentando em lutas de exibição. Porém, ao
-                presenciar o assassinando de seu tio Ben e sentir-se culpado,
-                Peter decide não mais usar seus poderes para proveito próprio e
-                sim para enfrentar o mal, tendo como seu primeiro grande desafio
-                o psicótico Duende Verde.
+                <strong>Sinopse:</strong>&nbsp;Depois de lutar ao lado dos
+                Vingadores, chegou a hora do jovem Peter Parker voltar para casa
+                em Nova York ao lado de sua tia May. Sob o olhar atento do
+                mentor Tony Stark, Peter começa a abraçar sua nova identidade
+                como Homem-Aranha e combate diariamente pequenos crimes nas
+                redondezas. Ele acredita que encontrou a missão de sua vida
+                quando o terrível vilão Abutre surge ameaçando a cidade. O
+                problema é que a tarefa não será tão fácil como ele imaginava.
               </p>
             </div>
           </div>
@@ -87,7 +87,7 @@
             <ul>
               <li>
                 <a
-                  href="../../assets/videos/spiderman-2002-trailer.mp4"
+                  href="../../assets/videos/spiderman-2017-trailer.mp4"
                   class="link-button"
                   target="_blank"
                 >
@@ -105,43 +105,37 @@
           <div class="gallery">
             <ul>
               <li>
-                <a
-                  data-fancybox
-                  href="../../assets/images/spiderman-tobey/movie-01/gallery/image-01-full.png"
-                >
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png"
                     alt=""
-                  />
-                </a>
+                /></a>
               </li>
               <li>
-                <a
-                  data-fancybox
-                  href="../../assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
-                >
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png"
                     alt=""
-                  />
-                </a>
+                /></a>
               </li>
               <li>
-                <a
-                  data-fancybox
-                  href="../../assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
-                >
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png"
                     alt=""
-                  />
-                </a>
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png"
+                    alt=""
+                /></a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   </body>
 </html>
