--- a/pages/tobey-maguire/spiderman2.html
+++ b/pages/tobey-maguire/spiderman2.html
@@ -8,13 +8,13 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/icons/spiderman1.png"
+      href="../../assets/images/icons/spiderman1-tom.png"
     />
-    <title>Spider Man 2 - Tobey Maguire | Bruno Dórea</title>
-    <link href="../../assets/css/internal.css" rel="stylesheet" />
+    <title>Spider Man 2 - Tom Holland | Bruno Dórea</title>
     <link
+      href="../../assets/css/internal.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+      type="text/css"
     />
     <!-- GOOGLE ANALYTICS -->
     <script
@@ -31,21 +31,21 @@
     </script>
   </head>
   <body>
-    <div class="s-wrapper s-spiderman-01-02">
-      <!-- <video loop autoplay muted>
-      <source src="../../assets/videos/spiderman2-2004-trailer.mp4" type="video/mp4" />
+    <div class="s-wrapper s-spiderman-03-02">
+      <!-- <video autoplay loop>
+      <source src="../../assets/videos/spiderman2-2019-trailer.mp4" type="video/mp4" />
     </video> -->
 
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../../assets/images/icons/spiderman1.png" />
+              <img src="../../assets/images/icons/spiderman1-tom.png" />
             </a>
           </div>
           <ul>
             <li><a href="spiderman1.html">01</a></li>
-            <li><a href="#02">02</a></li>
+            <li><a href="#02" class="active">02</a></li>
             <li><a href="spiderman3.html">03</a></li>
           </ul>
         </nav>
@@ -55,29 +55,27 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src="../../assets/images/spiderman-tobey/movie-02/logo.png"
-              alt="Spiderman (2004)"
-              title="Spiderman (2004)"
+              src="../../assets/images/spiderman-tom/movie-02/logo.png"
+              alt="Spiderman 2 (2005)"
+              title="Spiderman 2 (2005)"
             />
           </div>
 
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2004</li>
-                <li>Diretor: Sam Raimi</li>
+                <li>Ano: 2019</li>
+                <li>Diretor: Jon Watts</li>
               </ul>
             </div>
-
             <div class="s-description__text">
               <p>
-                <strong>Sinopse:</strong>&nbsp;O Dr. Otto Octavius é
-                transformado em Doutor Octopus quando uma falha em uma
-                experiência de fusão nuclear resulta em uma explosão que mata
-                sua esposa. Ele culpa o Homem-Aranha pelo acidente e deseja
-                vingança. Enquanto isso, o alter ego do herói, Peter Parker,
-                perde seus poderes. Para complicar as coisas, o seu melhor amigo
-                odeia o Homem-Aranha e sua amada fica noiva..
+                <strong>Sinopse:</strong>&nbsp;Peter Parker está em uma viagem
+                de duas semanas pela Europa, ao lado de seus amigos de colégio,
+                quando é surpreendido pela visita de Nick Fury. Convocado para
+                mais uma missão heroica, ele precisa enfrentar vários vilões que
+                surgem em cidades-símbolo do continente, como Londres, Paris e
+                Veneza, e também a aparição do enigmático Mysterio..
               </p>
             </div>
           </div>
@@ -86,9 +84,8 @@
             <ul>
               <li>
                 <a
-                  href="../../assets/videos/spiderman2-2004-trailer.mp4"
+                  href="../../assets/videos/spiderman2-2019-trailer.mp4"
                   class="link-button"
-                  target="_blank"
                 >
                   <span class="icon">
                     <div class="play-icon">&nbsp;</div>
@@ -104,37 +101,37 @@
           <div class="gallery">
             <ul>
               <li>
-                <a data-fancybox href="#">
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-02/gallery/image-01.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png"
                     alt=""
-                  />
-                </a>
+                /></a>
               </li>
               <li>
-                <a data-fancybox href="#">
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-02/gallery/image-02.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png"
                     alt=""
-                  />
-                </a>
+                /></a>
               </li>
               <li>
-                <a data-fancybox href="#">
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-02/gallery/image-03.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png"
                     alt=""
-                  />
-                </a>
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png"
+                    alt=""
+                /></a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
-    <script>
-      //  JavaScript will go here
-    </script>
   </body>
 </html>
