--- a/pages/tobey-maguire/spiderman3.html
+++ b/pages/tobey-maguire/spiderman3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,13 +8,13 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/icons/spiderman1.png"
+      href="../../assets/images/icons/spiderman1-tom.png"
     />
-    <title>Spider Man 3 - Tobey Maguire | Bruno Dórea</title>
-    <link href="../../assets/css/internal.css" rel="stylesheet" />
+    <title>Spider Man 3 - Tom Holland | Bruno Dórea</title>
     <link
+      href="../../assets/css/internal.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+      type="text/css"
     />
     <!-- GOOGLE ANALYTICS -->
     <script
@@ -30,23 +30,24 @@
       gtag("config", "G-TJQ2XJZPTD");
     </script>
   </head>
+
   <body>
-    <div class="s-wrapper s-spiderman-01-03">
-      <!-- <video loop autoplay muted>
-      <source src="../../assets/videos/spiderman3-2007-trailer.mp4" type="video/mp4" />
+    <div class="s-wrapper s-spiderman-03-03">
+      <!-- <video autoplay loop>
+      <source src="../../assets/videos/spiderman3-2021-trailer.mp4" type="video/mp4" />
     </video> -->
 
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../../assets/images/icons/spiderman1.png" />
+              <img src="../../assets/images/icons/spiderman1-tom.png" />
             </a>
           </div>
           <ul>
             <li><a href="spiderman1.html">01</a></li>
             <li><a href="spiderman2.html">02</a></li>
-            <li><a href="#03">03</a></li>
+            <li><a href="#" class="active">03</a></li>
           </ul>
         </nav>
       </div>
@@ -55,29 +56,27 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src="../../assets/images/spiderman-tobey/movie-03/logo.png"
-              alt="Spiderman (2002)"
-              title="Spiderman (2002)"
+              src="../../assets/images/spiderman-tom/movie-03/logo.png"
+              alt="Spiderman 3 (2007)"
+              title="Spiderman 3 (2007)"
             />
           </div>
 
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2007</li>
-                <li>Diretor: Sam Raimi</li>
+                <li>Ano: 2021</li>
+                <li>Diretor: Jon Watts</li>
               </ul>
             </div>
-
             <div class="s-description__text">
               <p>
-                <strong>Sinopse:</strong>&nbsp;O relacionamento entre Peter
-                Parker e Mary Jane parece estar dando certo, mas outros
-                problemas começam a surgir. A roupa de Homem-Aranha torna-se
-                preta e acaba controlando Peter - apesar de aumentar seus
-                poderes, ela revela e amplia o lado obscuro de sua
-                personalidade. Com isso, os vilões Venom e Homem-Areia tentam
-                destruir o herói..
+                <strong>Sinopse:</strong>&nbsp;Pela primeira vez, o Homem-Aranha
+                é desmascarado, o que não o deixa separar a vida pessoal da
+                atuação como um dos maiores super-heróis do mundo. Peter Parker
+                pede ajuda ao Doutor Estranho, mas os efeitos de mexer com as
+                lógicas do Bruno Dórea podem ser catastróficos. As coisas
+                complicam e muito com a chegada de vilões do multiverso..
               </p>
             </div>
           </div>
@@ -86,9 +85,8 @@
             <ul>
               <li>
                 <a
-                  href="../../assets/videos/spiderman3-2007-trailer.mp4"
+                  href="../../assets/videos/spiderman3-2021-trailer.mp4"
                   class="link-button"
-                  target="_blank"
                 >
                   <span class="icon">
                     <div class="play-icon">&nbsp;</div>
@@ -104,37 +102,37 @@
           <div class="gallery">
             <ul>
               <li>
-                <a data-fancybox href="#">
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-03/gallery/image-01.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png"
                     alt=""
-                  />
-                </a>
+                /></a>
               </li>
               <li>
-                <a data-fancybox href="#">
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-03/gallery/image-02.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png"
                     alt=""
-                  />
-                </a>
+                /></a>
               </li>
               <li>
-                <a data-fancybox href="#">
-                  <img
-                    src="../../assets/images/spiderman-tobey/movie-03/gallery/image-03.png"
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png"
                     alt=""
-                  />
-                </a>
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png"
+                    alt=""
+                /></a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
-    <script>
-      //  JavaScript will go here
-    </script>
   </body>
 </html>
